Fix scrollbar colors in Firefox

--- a/frontend/src/List/List.scss
+++ b/frontend/src/List/List.scss
@@ -75,18 +75,6 @@
 
    .tbody > div {
       scrollbar-color: var(--scrollbar-fg) var(--scrollbar-bg);  /* firefox */
-
-      &::-webkit-scrollbar {
-         width: auto;
-      }
-      &::-webkit-scrollbar-track {
-         background: var(--scrollbar-bg);
-      }
-      &::-webkit-scrollbar-thumb {
-         background-color: var(--scrollbar-fg);
-         border-radius: 20px;
-         border: 3px solid var(--scrollbar-border);
-      }
    }
 
    /**
