--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -174,6 +174,28 @@ body {
    font-size-adjust: 0.521;
 }
 
+/* Scrollbars */
+
+::-webkit-scrollbar { // Safari + Chrome
+   width: 10px;   // for vertical scrollbars only
+   height: auto;  // for horizontal scrollbars only
+}
+::-webkit-scrollbar-track {
+   background: var(--scrollbar-bg);
+}
+::-webkit-scrollbar-thumb {
+   background-color: var(--scrollbar-fg);
+   border-radius: 20px;
+   border: 3px solid var(--scrollbar-border);
+}
+@supports(scrollbar-color: red blue) { // Firefox
+   * {
+      scrollbar-color: var(--scrollbar-fg) var(--scrollbar-bg);
+      scrollbar-width: auto;  // auto, none, thin
+   }
+
+}
+
 /* settings from
  * https://www.smashingmagazine.com/2020/07/css-techniques-legibility/
  */
